--- a/exercises/1901090059/众数：.md
+++ b/exercises/1901090059/众数：.md
@@ -1,8 +1,8 @@
 **众数**：
 
-*more
+#more
 
-**说明 
+##说明 
 
 ```
 ![Image of Yaktocat]![微信图片_20190722231429](C:\Users\钱晓辉\Desktop\微信图片_20190722231429.jpg)
